Fixed hero text on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -182,7 +182,7 @@ button {
 
 .title-total, .title-percent {
     font-size: 1.5rem;
-    padding: 0.5rem 2rem;
+    padding: 0.5rem 1rem;
     flex: 1 1 auto;
     text-align: right;
 }
